Build but don't push if no commit message is given

--- a/build
+++ b/build
@@ -4,4 +4,6 @@ rm -rf output/
 
 pelican content/ -o output/ -s publishconf.py
 
-ghp-import -m "$1" output
+if [ -n "$1" ]; then
+  ghp-import -m "$1" output
+fi
